--- a/spotify/src/app/modules/history/components/search/search.component.html
+++ b/spotify/src/app/modules/history/components/search/search.component.html
@@ -1,5 +1,7 @@
 <div class="search-component">
-    <input (ngModelChange)="callSearch($event)" [(ngModel)]="src" type="text" placeholder="Artistas, canciones o pódcast">
-    <br>
-    <div>Resultado: {{src}}</div>
+    <input 
+        (ngModelChange)="callSearch($event)" 
+        [(ngModel)]="src" 
+        type="text" 
+        placeholder="Search songs...">
 </div>
