--- a/spotify/src/app/modules/history/pages/history-page/history-page.component.html
+++ b/spotify/src/app/modules/history/pages/history-page/history-page.component.html
@@ -1,5 +1,5 @@
 <div class="history-page">
-    <app-search (callbackData)="receiveData($event)"></app-search>
-    <app-play-list-body [tracks]="listResults$ | async"></app-play-list-body>
+    <app-search (searchEmitter)="searchTracks($event)"></app-search>
+    <app-play-list-body [tracks]="filteredTracks"></app-play-list-body>
 </div>
 
